# LoggerManager

./: CMakeLists.txt  README.ko.md  README.md  j2_logger_manager_config.ini  j2_logger_manager_config_korean.ini
include/j2/: LoggerManager.hpp
src/: LoggerManager.cpp  macro.hpp  main.cpp
